# AP_TA_EXAM_Fall_98

./: CMakeLists.txt  Collision_type.h  Input_interface.cpp  Input_interface.h  Kid.cpp  Kid.h  Kid_angry.cpp  Kid_angry.h  Kid_type.h  Map.cpp  Map.h  Rigid_body.cpp  Rigid_body.h  Simulator.cpp  Simulator.h  main.cpp  sample
Input_interface/: Input_interface.cpp  Input_interface.h
Kid/: Kid.cpp  Kid.h  Kid_angry.cpp  Kid_angry.h  Kid_coward.cpp  Kid_coward.h  Kid_peaceful.cpp  Kid_peaceful.h  Rigid_body.cpp  Rigid_body.h
Map/: Map.cpp  Map.h
Rigid_body/: Rigid_body.h
Simulator/: Map.cpp  Map.h  Simulator.cpp  Simulator.h
